--- a/src/language/pt-br/diario.json
+++ b/src/language/pt-br/diario.json
@@ -7,13 +7,13 @@
       "diario"
     ],
     [
-      "user",
+      "all_private_chats",
       "diarioon",
       "Receber todo dia uma passagem do Diário de Santa Faustina",
       "diarioon"
     ],
     [
-      "user",
+      "all_private_chats",
       "diariooff",
       "Cancelar o Diário de Santa Faustina",
       "diariooff"
