Adicionado escopo de usuário

--- a/src/language/pt-br/diario.json
+++ b/src/language/pt-br/diario.json
@@ -8,6 +8,12 @@
     ],
     [
       "all_private_chats",
+      "diario",
+      "Uma passagem do Diário de Santa Faustina",
+      "diario"
+    ],
+    [
+      "all_private_chats",
       "diarioon",
       "Receber todo dia uma passagem do Diário de Santa Faustina",
       "diarioon"
