Adicionado escopo de grupo

--- a/src/language/pt-br/diario.json
+++ b/src/language/pt-br/diario.json
@@ -13,6 +13,12 @@
       "diario"
     ],
     [
+      "all_group_chats",
+      "diario",
+      "Uma passagem do Diário de Santa Faustina",
+      "diario"
+    ],
+    [
       "all_private_chats",
       "diarioon",
       "Receber todo dia uma passagem do Diário de Santa Faustina",
